--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ timber="5.0.1"
 srl="1.1.0"
 paging="3.3.0"
 glide_version = "4.15.1"
+circleindicator = "2.1.6"
 
 mockito="5.3.1"
 mockk = "1.12.2"
@@ -44,6 +45,7 @@ androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navi
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
 androidx-swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version.ref = "srl" }
 androidx-paging = { group = "androidx.paging", name = "paging-runtime-ktx", version.ref = "paging" }
+me-relex-circleindicator = { group = "me.relex", name = "circleindicator", version.ref = "circleindicator" }
 
 #glide
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide_version" }
